# shop-bot

./: .env.example  Dockerfile  README.md  pyproject.toml  requirements.txt
app/accessor/: accessor.py
bot/: __main__.py  loader.py
bot/handlers/: __init__.py  commands.py  payments.py
bot/markups/inline/: __init__.py  web.py
bot/markups/reply/: web.py
bot/services/: MessageBox.py
bot/views/: invoice.py  view.py
utils/: config.py
utils/accessor/: __init__.py  accessor.py
utils/schemas/: __init__.py  orders.py  products.py  users.py
